Fixed header spacing and added images to .gitignore

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -57,7 +57,7 @@ header {
   width: 100%;
   border-bottom: 1px solid $accent-green;
   padding: 16px 0;
-  margin: 0 0 40px 0;
+  margin: 0 0 20px 0;
   position: sticky;
   top: 0;
   z-index: 100;
@@ -128,12 +128,15 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: normal;
   letter-spacing: -0.02em;
   text-shadow: 0 0 5px rgba(181, 232, 83, 0.15);
-  margin: 2em 0 0.75em 0;
+  margin: 0.4em 0 0.75em 0;
   line-height: 1.3;
+}
 
-  &:first-child {
-    margin-top: 0;
-  }
+#main_content > h1:first-child,
+#main_content > h2:first-child,
+#main_content > p:first-child + h1,
+#main_content > p:first-child + h2 {
+  margin-top: 0;
 }
 
 #main_content {
